--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h1 style='color:red'>Deployed By DevOps demo on Aug 26</h1>
+<h1 style='color:red'>Deployed By DevOps demo on Aug 28 Mohan</h1>
 </body>
 <footer>powered by Mohan
 </footer>
